Geometry Nodes crashes when creating new Group Input parameter #90248

Closed
opened 2021-07-27 22:05:59 +02:00 by Val Cohen · 12 comments

System Information
Operating system: Mac OS 10.15.7 (MacBook Pro (Retina, 15inch, Early 2013))
Graphics card: NVIDIA GeForce GT 650M 1GB / Intel HD Graphics 4000 1536 MB

Operating system: Mac OS 11.4 (Mac Pro, Late 2013))
Graphics card: AMD FirePro D300 2 GB

Blender Version
Broken: 3.0.0, 6ee14c966d, master, (3.0.0 2021-07-27)

Short description of error
Adding a new Geometry Nodes Group Input socket causes Blender to immediately quit. In the attached file, things were working fine until I decided I needed another input parameter. To set it up, I dragged a noodle from an Integer input on an existing node to the empty socket at the bottom of a Group Input node. As soon as I release the mouse the window closes.

This is related to https://developer.blender.org/T90328

There are 22 existing inputs on this group, and I’m trying to add a 23rd. I have not seen any mention of a limit on Group Input sockets.

I dragged various Integer and Float sockets to the empty socket on a Group Input. I did this with the Group Input completely visible and also with its unused sockets hidden. As soon as I add the socket, Blender quits.

Exact steps for others to reproduce the error
terra cotta roof tile gen.blend
Open the attached file. An object is already selected, and its “roof tile grid” Node Group is open in a "Nodes" workspace.

  1. Find an existing integer or float field on a node, and drag from its input socket to the empty socket on a Group Input.
  • Expected: A new input socket is created.
  • Actual: Blender immediately quits.
**System Information** Operating system: Mac OS 10.15.7 (MacBook Pro (Retina, 15inch, Early 2013)) Graphics card: NVIDIA GeForce GT 650M 1GB / Intel HD Graphics 4000 1536 MB Operating system: Mac OS 11.4 (Mac Pro, Late 2013)) Graphics card: AMD FirePro [D300](https://archive.blender.org/developer/D300) 2 GB **Blender Version** Broken: 3.0.0, 6ee14c966d05, master, (3.0.0 2021-07-27) **Short description of error** Adding a new Geometry Nodes Group Input socket causes Blender to immediately quit. In the attached file, things were working fine until I decided I needed another input parameter. To set it up, I dragged a noodle from an Integer input on an existing node to the empty socket at the bottom of a Group Input node. As soon as I release the mouse the window closes. This is related to https://developer.blender.org/T90328 There are 22 existing inputs on this group, and I’m trying to add a 23rd. I have not seen any mention of a limit on Group Input sockets. I dragged various Integer and Float sockets to the empty socket on a Group Input. I did this with the Group Input completely visible and also with its unused sockets hidden. As soon as I add the socket, Blender quits. **Exact steps for others to reproduce the error** [terra cotta roof tile gen.blend](https://archive.blender.org/developer/F10241630/terra_cotta_roof_tile_gen.blend) Open the attached file. An object is already selected, and its “roof tile grid” Node Group is open in a "Nodes" workspace. 1) Find an existing integer or float field on a node, and drag from its input socket to the empty socket on a Group Input. - Expected: A new input socket is created. - Actual: Blender immediately quits.
Author

Added subscriber: @vbc

Added subscriber: @vbc
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

In the Geometry Nodes editor, open the Properties...

Can reproduce the crash as said in the 2nd point and can not recreate the crash with 3rd case. Not sure If I understand the fist condition.

Can you please report all them separately? It is good to keep one issue per report :)

> In the Geometry Nodes editor, open the Properties... Can reproduce the crash as said in the 2nd point and can not recreate the crash with 3rd case. Not sure If I understand the fist condition. Can you please report all them separately? It is good to keep one issue per report :)
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Author

Sure, I'll split them up -- I reported them together because the same underlying action (adding a new input to the Group Input) causes the crash, from two different parts of the UI. Busy day today, I'll update this and add a new ticket sometime tomorrow.

Sure, I'll split them up -- I reported them together because the same underlying action (adding a new input to the Group Input) causes the crash, from two different parts of the UI. Busy day today, I'll update this and add a new ticket sometime tomorrow.
Author

Hi @PratikPB2123 I added a new ticket, https://developer.blender.org/T90328, and reduced this one down to a single case. I hope this helps!

Hi @PratikPB2123 I added a new ticket, https://developer.blender.org/T90328, and reduced this one down to a single case. I hope this helps!
Member

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm crash, assert triggered BLI_assert(index < this->size());

>	blender.exe!blender::Vector<blender::nodes::InputSocketRef *,4,blender::GuardedAllocator>::operator[](__int64 index) Line 308	C++

 	blender.exe!blender::nodes::NodeRef::input(int index) Line 506	C++
 	blender.exe!blender::nodes::DOutputSocket::get_corresponding_group_node_input() Line 161	C++
 	blender.exe!blender::nodes::DInputSocket::foreach_origin_socket(blender::FunctionRef<void __cdecl(blender::nodes::DSocket)> origin_fn) Line 200	C++
 	blender.exe!blender::modifiers::geometry_nodes::GeometryNodesEvaluator::create_states_for_reachable_nodes() Line 437	C++
 	blender.exe!blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute() Line 397	C++
 	blender.exe!blender::modifiers::geometry_nodes::evaluate_geometry_nodes(blender::modifiers::geometry_nodes::GeometryNodesEvaluationParams & params) Line 1626	C++
 	blender.exe!compute_geometry(const blender::nodes::DerivedNodeTree & tree, blender::Span<blender::nodes::NodeRef const *> group_input_nodes, const blender::nodes::InputSocketRef & socket_to_compute, GeometrySet input_geometry_set, NodesModifierData * nmd, const ModifierEvalContext * ctx) Line 919	C++
 	blender.exe!modifyGeometry(ModifierData * md, const ModifierEvalContext * ctx, GeometrySet & geometry_set) Line 1014	C++
 	blender.exe!modifyGeometrySet(ModifierData * md, const ModifierEvalContext * ctx, GeometrySet * geometry_set) Line 1042	C++
 	blender.exe!modifier_modify_mesh_and_geometry_set(ModifierData * md, const ModifierEvalContext & mectx, Mesh * input_mesh, GeometrySet & geometry_set) Line 957	C++
 	blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, const bool use_deform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final, GeometrySet * * r_geometry_set) Line 1292	C++
 	blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1935	C++
 	blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 2065	C++
 	blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 204	C
 	blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 396	C
 	blender.exe!blender::deg::DepsgraphNodeBuilder::build_object_data_geometry::__l2::<lambda>(Depsgraph * depsgraph) Line 1486	C++
 	[External Code]	
 	blender.exe!blender::deg::`anonymous namespace'::evaluate_node(const blender::deg::`anonymous-namespace'::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) Line 116	C++
 	blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128	C++
 	blender.exe!Task::operator()() Line 179	C++
 	blender.exe!tbb::internal::function_task<Task>::execute() Line 1060	C++
 	[External Code]	
 	blender.exe!tbb::task::wait_for_all() Line 821	C++
 	blender.exe!tbb::internal::task_group_base::wait() Line 168	C++
 	blender.exe!tbb_task_pool_work_and_wait(TaskPool * pool) Line 254	C++
 	blender.exe!BLI_task_pool_work_and_wait(TaskPool * pool) Line 501	C++
 	blender.exe!blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) Line 401	C++
 	blender.exe!deg_flush_updates_and_refresh(blender::deg::Depsgraph * deg_graph) Line 59	C++
 	blender.exe!DEG_evaluate_on_refresh(Depsgraph * graph) Line 76	C++
 	blender.exe!scene_graph_update_tagged(Depsgraph * depsgraph, Main * bmain, bool only_if_tagged) Line 2662	C
 	blender.exe!BKE_scene_graph_update_tagged(Depsgraph * depsgraph, Main * bmain) Line 2710	C
 	blender.exe!wm_event_do_depsgraph(bContext * C, bool is_after_open_file) Line 389	C
 	blender.exe!wm_event_do_refresh_wm_and_depsgraph(bContext * C) Line 415	C
 	blender.exe!wm_event_do_notifiers(bContext * C) Line 625	C
 	blender.exe!WM_main(bContext * C) Line 653	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562	C
 	[External Code]	
Can confirm crash, assert triggered `BLI_assert(index < this->size());` ``` > blender.exe!blender::Vector<blender::nodes::InputSocketRef *,4,blender::GuardedAllocator>::operator[](__int64 index) Line 308 C++ blender.exe!blender::nodes::NodeRef::input(int index) Line 506 C++ blender.exe!blender::nodes::DOutputSocket::get_corresponding_group_node_input() Line 161 C++ blender.exe!blender::nodes::DInputSocket::foreach_origin_socket(blender::FunctionRef<void __cdecl(blender::nodes::DSocket)> origin_fn) Line 200 C++ blender.exe!blender::modifiers::geometry_nodes::GeometryNodesEvaluator::create_states_for_reachable_nodes() Line 437 C++ blender.exe!blender::modifiers::geometry_nodes::GeometryNodesEvaluator::execute() Line 397 C++ blender.exe!blender::modifiers::geometry_nodes::evaluate_geometry_nodes(blender::modifiers::geometry_nodes::GeometryNodesEvaluationParams & params) Line 1626 C++ blender.exe!compute_geometry(const blender::nodes::DerivedNodeTree & tree, blender::Span<blender::nodes::NodeRef const *> group_input_nodes, const blender::nodes::InputSocketRef & socket_to_compute, GeometrySet input_geometry_set, NodesModifierData * nmd, const ModifierEvalContext * ctx) Line 919 C++ blender.exe!modifyGeometry(ModifierData * md, const ModifierEvalContext * ctx, GeometrySet & geometry_set) Line 1014 C++ blender.exe!modifyGeometrySet(ModifierData * md, const ModifierEvalContext * ctx, GeometrySet * geometry_set) Line 1042 C++ blender.exe!modifier_modify_mesh_and_geometry_set(ModifierData * md, const ModifierEvalContext & mectx, Mesh * input_mesh, GeometrySet & geometry_set) Line 957 C++ blender.exe!mesh_calc_modifiers(Depsgraph * depsgraph, Scene * scene, Object * ob, const bool use_deform, const bool need_mapping, const CustomData_MeshMasks * dataMask, const int index, const bool use_cache, const bool allow_shared_mesh, Mesh * * r_deform, Mesh * * r_final, GeometrySet * * r_geometry_set) Line 1292 C++ blender.exe!mesh_build_data(Depsgraph * depsgraph, Scene * scene, Object * ob, const CustomData_MeshMasks * dataMask, const bool need_mapping) Line 1935 C++ blender.exe!makeDerivedMesh(Depsgraph * depsgraph, Scene * scene, Object * ob, BMEditMesh * em, const CustomData_MeshMasks * dataMask) Line 2065 C++ blender.exe!BKE_object_handle_data_update(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 204 C blender.exe!BKE_object_eval_uber_data(Depsgraph * depsgraph, Scene * scene, Object * ob) Line 396 C blender.exe!blender::deg::DepsgraphNodeBuilder::build_object_data_geometry::__l2::<lambda>(Depsgraph * depsgraph) Line 1486 C++ [External Code] blender.exe!blender::deg::`anonymous namespace'::evaluate_node(const blender::deg::`anonymous-namespace'::DepsgraphEvalState * state, blender::deg::OperationNode * operation_node) Line 116 C++ blender.exe!blender::deg::`anonymous namespace'::deg_task_run_func(TaskPool * pool, void * taskdata) Line 128 C++ blender.exe!Task::operator()() Line 179 C++ blender.exe!tbb::internal::function_task<Task>::execute() Line 1060 C++ [External Code] blender.exe!tbb::task::wait_for_all() Line 821 C++ blender.exe!tbb::internal::task_group_base::wait() Line 168 C++ blender.exe!tbb_task_pool_work_and_wait(TaskPool * pool) Line 254 C++ blender.exe!BLI_task_pool_work_and_wait(TaskPool * pool) Line 501 C++ blender.exe!blender::deg::deg_evaluate_on_refresh(blender::deg::Depsgraph * graph) Line 401 C++ blender.exe!deg_flush_updates_and_refresh(blender::deg::Depsgraph * deg_graph) Line 59 C++ blender.exe!DEG_evaluate_on_refresh(Depsgraph * graph) Line 76 C++ blender.exe!scene_graph_update_tagged(Depsgraph * depsgraph, Main * bmain, bool only_if_tagged) Line 2662 C blender.exe!BKE_scene_graph_update_tagged(Depsgraph * depsgraph, Main * bmain) Line 2710 C blender.exe!wm_event_do_depsgraph(bContext * C, bool is_after_open_file) Line 389 C blender.exe!wm_event_do_refresh_wm_and_depsgraph(bContext * C) Line 415 C blender.exe!wm_event_do_notifiers(bContext * C) Line 625 C blender.exe!WM_main(bContext * C) Line 653 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562 C [External Code] ```

This issue was referenced by 8fb9155598

This issue was referenced by 8fb91555988d48b6b9d546b0654d5c6274fa1134
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-08-25 18:01:54 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90248
No description provided.